--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "dotenv": "^8.0.0",
     "moment": "^2.24.0",
     "node-spotify-api": "^1.1.1",
+    "request": "^2.88.0",
+    "spotify": "^0.3.0",
     "spotify-web-api-js": "^1.2.0",
     "spotify-web-api-node": "^4.0.0"
   },
