add function to make bandsintown api function

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ SPOTIFY_ID = 70b41a5fbe9443ab82ba13867d733702
 
 SPOTIFY_SECRET = d74dd84e408148c59a5ee2983c707e9b
 
-BANDS_ID = 08604aa59856ce06c5cda48314b74c4e
+BANDS_ID = /events?app_id=codingbootcamp
 
 MOVIES_ID = &y=&plot=short&apikey=trilogy
 
